--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,11 +40,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-          cache: 'npm'
+          cache: 'yarn'
       - name: Install dependencies
-        run: npm ci
+        run: yarn install
       - name: 💅🏼 Linting
-        run: npm run lint
+        run: yarn lint
 
   deploy_to_vercel:
     needs: [lint]
