--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run reset:vite && tsc && vite build",
+    "build": "yarn reset:vite && tsc && vite build",
     "preview": "vite preview",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(ts|tsx|js|jsx|json|css|md|mdx|html)\"",
     "prettier:fix": "prettier --ignore-path .gitignore \"**/*.+(ts|tsx|js|jsx|json|css|md|mdx|html)\" --write",
     "lint": "eslint --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx .",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "yarn lint -- --fix",
     "lint-staged": "lint-staged — config .lintstagedrc",
     "clean": "rimraf node_modules && npm install --no-audit --no-fund --omit=optional",
     "reset:vite": "rimraf ./.vite-cache ./dist",
