🐳 chore: rem. template files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "conventionalCommits.scopes": ["dependencies"]
+  "conventionalCommits.scopes": ["dependencies"],
+  "prettier.configPath": ".prettierrc"
 }
