--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^5.40.1",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
+    "classnames": "^2.3.2",
     "commitlint-config-gitmoji": "^2.2.6",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
